--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
-    "@mui/styles": "^5.2.3",
     "opensheetmusicdisplay": "^1.3.1",
     "osmd-audio-player": "^0.6.4",
     "react": "^17.0.2",
@@ -22,7 +18,12 @@
     "soundfont-player": "^0.12.0"
   },
   "devDependencies": {
-    "snowpack": "3.0.13",
+    "@emotion/react": "^11.7.1",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "@snowpack/plugin-react-refresh": "^2.5.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "snowpack": "^3.8.8",
     "typescript": "^4.4.4"
   }
 }
