--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
   "name": "scottishmetricalpsalter",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "The 1650 Scottish Metrical Psalter in MusicXML.",
-  "main": "main.ts",
   "author": "Dieuwe de Boer",
   "license": "GPL-3.0+",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
-    "@emotion/styled": "^11.6.0",
-    "opensheetmusicdisplay": "^1.3.1",
-    "osmd-audio-player": "^0.6.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.14.20",
+    "opensheetmusicdisplay": "^1.7.1",
+    "osmd-audio-player": "^0.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "soundfont-player": "^0.12.0"
   },
   "devDependencies": {
-    "@emotion/react": "^11.7.1",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "snowpack": "^3.8.8",
-    "typescript": "^4.4.4"
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "18.2.42",
+    "@types/react-dom": "18.2.17",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "typescript": "5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
