--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scottishmetricalpsalter",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "The 1650 Scottish Metrical Psalter in MusicXML.",
   "author": "Dieuwe de Boer",
   "license": "GPL-3.0+",
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.14.20",
+    "@reduxjs/toolkit": "^2.1.0",
     "opensheetmusicdisplay": "^1.7.1",
     "osmd-audio-player": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-swipeable": "^7.0.1",
+    "redux": "^5.0.1",
     "soundfont-player": "^0.12.0"
   },
   "devDependencies": {
